2004-10-11  Manish Singh  <yosh@gimp.org>

	* plug-ins/fp/fp.c: Moved from here...

	* plug-ins/common/fp.c: ... to here.

	* plug-ins/common/plugin-defs.pl: changed accordingly.

	* plug-ins/common/.cvsignore
	* plug-ins/common/Makefile.am: regenerated.

	* configure.in
	* plug-ins/Makefile.am
	* plug-ins/fp: Removed directory.

2004-10-11  DindinX  <dindinx@gimp.org>

	* plug-ins/common/jigsaw.c: ported to GimpAspectPreview.

2004-10-11  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/flarefx.c: use a GimpSizeEntry for specifying
	the flare center. Fixed flare center dragging. Lots of cleanup.

2004-10-11  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/dialogs-types.h: removed ColorDialog typedef.

2004-10-11  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimptooloptions-gui.[ch]: added utility functions
	which create a GimpViewableButton+GimpContainerEntry combo for
	brushes, patterns, gradients and fonts and a very ugly utility
	function which packs one of these combos into a GtkFrame returned
	by gimp_prop_enum_radio_frame_new(). This stuff does not really
	belong here but is too ugly to be moved to a more general place.

	* app/tools/gimpbucketfilloptions.c
	* app/tools/gimppaintoptions-gui.c
	* app/tools/gimptextoptions.c: use the new utility functions. Moved
	the pattern previews into the radio frame where using the pattern
	is selected. Make them insensitive if using the pattern is not
	selected.

2004-10-11  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h: tweaked the thumbnail related blurbs.

	* app/dialogs/preferences-dialog.c: group the thumbnail related
	controls together. Could probably still be improved...

2004-10-11  Sven Neumann  <sven@gimp.org>

	* app/actions/documents-commands.c
	(documents_recreate_preview_cmd_callback): when recreating the
	thumbnail, delete old thumbnails and create it in the configured
	thumbnail size instead of the container view preview size.
